updated ansible file to get benchmark after runnig javafile